@@ -29,7 +29,14 @@ sub process {
 
 	my $error_id = $self->{'cb_error_id'}->($marc_record);
 
-	my $field_008_string = $marc_record->field('008')->as_string;
+	my $field_008_obj = $marc_record->field('008');
+	if (! defined $field_008_obj) {
+		push @{$struct_hr->{'not_valid'}->{$error_id}}, {
+			'error' => 'Field 008 is not present.',
+		};
+		return;
+	}
+	my $field_008_string = $field_008_obj->as_string;
 	my $field_008 = eval {
 		MARC::Field008->new(
 			'leader' => $leader,
